Fix search tag position on mobile

--- a/assets/stylesheets/components/_mobile.scss
+++ b/assets/stylesheets/components/_mobile.scss
@@ -47,7 +47,7 @@
     &:before { left: .5rem; }
   }
 
-  ._search-tag { left: .325rem; }
+  ._search-tag { left: .5rem; }
 
   // Sidebar
 
